# win-capture-audio

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  buildspec.json  help.txt  inject-library.c  main.js  mains.js  obfuscate.c  window-helpers.c  window-helpers.h  zh-CN.ini
.github/actions/build-plugin/: action.yml
.github/scripts/: .build.zsh  Build-Windows.ps1  check-format.sh
.github/workflows/: main.yml
cmake/bundle/windows/: installer-Windows.iss.in
data/locale/: de-DE.ini  en-GB.ini  es-ES.ini  fa-IR.ini  fr-FR.ini  it-IT.ini  ja-JP.ini  ko-KR.ini  nl-NL.ini  pl-PL.ini  pt-BR.ini  pt-PT.ini  ru-RU.ini  tr-TR.ini  uk-UA.ini  zh-CN.ini  zh-TW.ini
get-audio-offsets/: uuids.cpp
inject-helper/: CMakeLists.txt  inject-helper.c
installer/: installer.iss.in
src/: audio-capture-helper-manager.hpp  audio-capture-helper.cpp  audio-capture-helper.h  audio-capture-helper.hpp  audio-capture.c  audio-capture.cpp  audio-capture.h  audio-capture.hpp  common.h  common.hpp  format-conversion.h  format-conversion.hpp  hook-info.h  mixer.cpp  mixer.hpp  obfuscate.cpp  obfuscate.h  plugin-macros.h.in  plugin-macros.hpp.in  plugin.c  plugin.cpp  session-monitor.cpp  session-monitor.hpp  window-helpers.c  window-helpers.cpp  window-helpers.h  window-helpers.hpp
src/audio-capture-helper/: CMakeLists.txt  audio-capture-helper.c  audio-capture-helper.cpp  audio-capture-helper.h  audio-capture-helper.hpp  format-conversion.h  format-conversion.hpp  uuids.cpp  uuids.h
src/audio-hook/: CMakeLists.txt  audio-hook.c
src/get-audio-offsets/: CMakeLists.txt  get-audio-offsets.c  uuids.h
src/inject-helper/: CMakeLists.txt
